<resources>
    <string name="app_name">NumberGuesser</string>
    <string name="title">Guess a number between 0 and 100</string>
    <string name="startButton">Start</string>
    <string name="trialsLeftTitle">Trials Left: </string>
    <string name="resultDisplay">-</string>
    <string name="playAgainButton">Play Again</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="btnClear">Clear</string>
    <string name="btnCheck">Check</string>
</resources>