<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    tools:context=".MainGame">

    <GridLayout
        android:id="@+id/gridDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <TextView
            android:id="@+id/inputDisplay"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:text="@string/zero"
            android:textSize="30sp"
            android:textColor="#485563"
            android:gravity="center_horizontal"
            android:layout_margin="3dp"/>

        <Button
            android:id="@+id/btnOne"
            android:onClick="numberClicked"
            android:text="@string/one"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnTwo"
            android:onClick="numberClicked"
            android:text="@string/two"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnThree"
            android:onClick="numberClicked"
            android:text="@string/three"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnFour"
            android:onClick="numberClicked"
            android:text="@string/four"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnFive"
            android:onClick="numberClicked"
            android:text="@string/five"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnSix"
            android:onClick="numberClicked"
            android:text="@string/six"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnSeven"
            android:onClick="numberClicked"
            android:text="@string/seven"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnEight"
            android:onClick="numberClicked"
            android:text="@string/eight"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnNine"
            android:onClick="numberClicked"
            android:text="@string/nine"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnZero"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:onClick="numberClicked"
            android:text="@string/zero"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnClear"
            android:onClick="clearClicked"
            android:text="@string/btnClear"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

        <Button
            android:id="@+id/btnCheck"
            android:layout_rowSpan="2"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:onClick="checkClicked"
            android:text="@string/btnCheck"
            android:textColor="#FFFFFF"
            android:background="@drawable/custom_button"
            android:layout_margin="3dp" />

    </GridLayout>

    <TextView
        android:id="@+id/tvClueDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#485563"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23000002" />

    <TextView
        android:id="@+id/tvTrialsLeftTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/trialsLeftTitle"
        android:textColor="#485563"
        app:layout_constraintEnd_toStartOf="@+id/tvTrialsLeftDisplay"
        app:layout_constraintTop_toTopOf="@+id/tvTrialsLeftDisplay" />

    <TextView
        android:id="@+id/tvTrialsLeftDisplay"
        android:text="@string/five"
        android:textColor="#485563"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>